--- a/tests/cfg/acpoa.cfg
+++ b/tests/cfg/acpoa.cfg
@@ -1,4 +1,12 @@
-[plugin_repositories]
-pypi=https://pypi.org/simple/
-local=path/to/dir/
-official=https://some/official/acpoa/server/
+[repo:pypi]
+enabled = yes
+index = https://pypi.org/simple
+
+[repo:local_project]
+enabled = yes
+index = file://path/to/project/directory
+type = editable
+
+[repo:official_app_repo]
+enabled = false
+index = https://do/not/exists
