Add repository management
Signed-off-by: leikt <leikt.solreihin@gmail.com>

--- a/tests/test_plugin_installer/acpoa.cfg
+++ b/tests/test_plugin_installer/acpoa.cfg
@@ -4,3 +4,7 @@ enable-on-installation = yes
 [repositories]
 enable-on-installation = yes
 
+[repo:pypi]
+enabled = yes
+index = https://pypi.org/simple
+
