Reorganize, Divide PluginInstaller into PluginManager and RepositoryManager
Signed-off-by: leikt <leikt.solreihin@gmail.com>

--- a/tests/cfg/acpoa.cfg
+++ b/tests/cfg/acpoa.cfg
@@ -1,3 +1,9 @@
+[plugins]
+enable-on-installation = yes
+
+[repositories]
+enable-on-installation = yes
+
 [repo:pypi]
 enabled = yes
 index = https://pypi.org/simple
@@ -10,3 +16,4 @@ type = editable
 [repo:official_app_repo]
 enabled = false
 index = https://do/not/exists
+
